// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatRoomList.vue snapshot 1`] = `
<div
  class="v-card v-sheet theme--light"
>
  <div
    class="v-list v-list--two-line theme--light"
    role="list"
  />
</div>
`;

exports[`ChatRoomList.vue snapshot check with items 1`] = `
<div
  class="v-card v-sheet theme--light"
>
  <div
    class="v-list v-list--two-line theme--light"
    role="list"
  >
    <div
      role="listitem"
    >
      <a
        class="v-list__tile v-list__tile--link theme--light"
      >
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            Hello Chat Room
          </div>
           
          <div
            class="v-list__tile__sub-title text-xs-right"
          />
        </div>
      </a>
    </div>
     
    <!---->
  </div>
</div>
`;
